--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/nodemon": "^1.19.6",
+    "axios": "^1.7.9",
     "body-parse": "^0.1.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
