--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "msnodesqlv8": "^4.2.1",
     "mssql": "^10.0.4",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
   },
@@ -38,6 +40,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.7",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
