--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.jpg
+*.jfif
+# Environment
+.env
+.env.local
+.env.*.local
+.env.development
+.env.test
+.env.production
